temp fix close button overlap

--- a/src/controls/controls.styl
+++ b/src/controls/controls.styl
@@ -11,7 +11,6 @@
     width w(80)
     overflow-y auto !important
     #icon-cross
-        position absolute
         top 0
         right 0
 
